--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                 <ul class="portfolio-list">
                     <li class="portfolio-item">
                         <div class="info-box">
-                            <img src="./images/portfolio-1.jpg" alt="portfolio image 1 " class="portfolio-image" width="360">
+                            <img src="./images/portfolio-1.jpg" srcset="./images/portfolio-1.jpg 1x, ./images/portfolio-1-2x.jpg 2x" alt="portfolio image 1 " class="portfolio-image" width="360">
                             <p class="overlay">
                                 14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -349,7 +349,7 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="info-box">
-                            <img src="./images/portfolio-2.jpg" alt="portfolio image 2" class="portfolio-image" width="360">
+                            <img src="./images/portfolio-2.jpg" srcset="./images/portfolio-2.jpg 1x, ./images/portfolio-2-2x.jpg 2x" alt="portfolio image 2" class="portfolio-image" width="360">
                             <p class="overlay">
                                 14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -363,7 +363,7 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="info-box">
-                            <img src="./images/portfolio-3.jpg" alt="portfolio image 3" class="portfolio-image" width="360">
+                            <img src="./images/portfolio-3.jpg" srcset="./images/portfolio-3.jpg 1x, ./images/portfolio-3-2x.jpg 2x" alt="portfolio image 3" class="portfolio-image" width="360">
                             <p class="overlay">
                                 14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -377,7 +377,7 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="info-box">
-                            <img src="./images/portfolio-4.jpg" alt="portfolio image 4" class="portfolio-image" width="360">
+                            <img src="./images/portfolio-4.jpg " srcset="./images/portfolio-4.jpg 1x, ./images/portfolio-4-2x.jpg 2x" alt="portfolio image 4" class="portfolio-image" width="360">
                             <p class="overlay">
                                 14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -392,7 +392,7 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="info-box">
-                            <img src="./images/portfolio-5.jpg" alt="portfolio image 5" class="portfolio-image" width="360">
+                            <img src="./images/portfolio-5.jpg" srcset="./images/portfolio-5.jpg 1x, ./images/portfolio-5-2x.jpg 2x" alt="portfolio image 5" class="portfolio-image" width="360">
                             <p class="overlay">
                                 14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -406,7 +406,7 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="info-box">
-                            <img src="./images/portfolio-6.jpg" alt="portfolio image 6" class="portfolio-image" width="360">
+                            <img src="./images/portfolio-6.jpg" srcset="./images/portfolio-6.jpg 1x, ./images/portfolio-6-2x.jpg 2x" alt="portfolio image 6" class="portfolio-image" width="360">
                             <p class="overlay">
                                 14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
