--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <address class="mob-menu-contacts">
                     <ul class="mob-contacts-list">
                         <li class="mob-contacts-item">
-                            <a href="tel:+110001111111" class="mob-contacts-link current">+11 (000) 111-11-11</a>
+                            <a href="tel:+110001111111" class="mob-contacts-link">+11 (000) 111-11-11</a>
                         </li>
                         <li class="mob-contacts-item">
                             <a href="mailto:info@devstudio.com" class="mob-contacts-link">info@devstudio.com</a>
